--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-
-h1,
-.h1 {
+h1, .h1 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -10,25 +8,18 @@ h1,
   font-size: 2.25rem;
   line-height: 1.2;
 }
-
 @media (min-width: 768px) {
-
-  h1,
-  .h1 {
+  h1, .h1 {
     font-size: 2.25rem;
   }
 }
-
 @media (min-width: 1200px) {
-
-  h1,
-  .h1 {
+  h1, .h1 {
     font-size: 2.25rem;
   }
 }
 
-h2,
-.h2 {
+h2, .h2 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -36,25 +27,18 @@ h2,
   font-size: 2rem;
   line-height: 1.2;
 }
-
 @media (min-width: 768px) {
-
-  h2,
-  .h2 {
+  h2, .h2 {
     font-size: 2rem;
   }
 }
-
 @media (min-width: 1200px) {
-
-  h2,
-  .h2 {
+  h2, .h2 {
     font-size: 2rem;
   }
 }
 
-h3,
-.h3 {
+h3, .h3 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -62,25 +46,18 @@ h3,
   font-size: 1.5rem;
   line-height: 1.2;
 }
-
 @media (min-width: 768px) {
-
-  h3,
-  .h3 {
+  h3, .h3 {
     font-size: 1.5rem;
   }
 }
-
 @media (min-width: 1200px) {
-
-  h3,
-  .h3 {
+  h3, .h3 {
     font-size: 2rem;
   }
 }
 
-h4,
-.h4 {
+h4, .h4 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -88,25 +65,18 @@ h4,
   font-size: 16px;
   line-height: 1.2;
 }
-
 @media (min-width: 768px) {
-
-  h4,
-  .h4 {
+  h4, .h4 {
     font-size: 1.125rem;
   }
 }
-
 @media (min-width: 1200px) {
-
-  h4,
-  .h4 {
+  h4, .h4 {
     font-size: 1.25rem;
   }
 }
 
-h5,
-.h5 {
+h5, .h5 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -114,25 +84,18 @@ h5,
   font-size: 1rem;
   line-height: 1.2;
 }
-
 @media (min-width: 768px) {
-
-  h5,
-  .h5 {
+  h5, .h5 {
     font-size: 1.125rem;
   }
 }
-
 @media (min-width: 1200px) {
-
-  h5,
-  .h5 {
+  h5, .h5 {
     font-size: 1.125rem;
   }
 }
 
-h6,
-.h6 {
+h6, .h6 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -140,19 +103,13 @@ h6,
   font-size: 1rem;
   line-height: 1.2;
 }
-
 @media (min-width: 768px) {
-
-  h6,
-  .h6 {
+  h6, .h6 {
     font-size: 1rem;
   }
 }
-
 @media (min-width: 1200px) {
-
-  h6,
-  .h6 {
+  h6, .h6 {
     font-size: 1rem;
   }
 }
@@ -177,44 +134,37 @@ nav {
   justify-content: space-between;
   padding: 10px 5px;
 }
-
 .navbar_brand {
   width: 45px;
   height: 30px;
 }
-
 @media screen and (min-width: 992px) {
   .navbar_brand {
     width: 75px;
     height: 45px;
   }
 }
-
 @media screen and (min-width: 992px) {
   .navbar_brand {
     width: 100px;
     height: 65px;
   }
 }
-
 .navbar_menu {
   display: flex;
   gap: 20px;
 }
-
 .navbar_menu .customBox {
   opacity: 0;
   width: 0;
   height: 0;
   display: flex;
 }
-
-.navbar_menu .customBox~label {
+.navbar_menu .customBox ~ label {
   display: none;
 }
-
 @media screen and (max-width: 1024px) {
-  .navbar_menu .customBox~label {
+  .navbar_menu .customBox ~ label {
     color: white;
     display: block;
     display: flex;
@@ -223,15 +173,12 @@ nav {
     width: 24px;
     position: relative;
   }
-
-  .navbar_menu .customBox~label .icon {
+  .navbar_menu .customBox ~ label .icon {
     width: 24px;
     height: 2px;
     background-color: #FF7400;
   }
-
-  .navbar_menu .customBox~label .icon::before,
-  .navbar_menu .customBox~label .icon::after {
+  .navbar_menu .customBox ~ label .icon::before, .navbar_menu .customBox ~ label .icon::after {
     content: "";
     width: 24px;
     height: 2px;
@@ -241,18 +188,15 @@ nav {
     transform: rotate(0deg);
     transition: all 0.5s ease;
   }
-
-  .navbar_menu .customBox~label .icon::before {
+  .navbar_menu .customBox ~ label .icon::before {
     top: 0;
     transition: all 0.5s ease;
   }
-
-  .navbar_menu .customBox~label .icon::after {
+  .navbar_menu .customBox ~ label .icon::after {
     bottom: 0;
     transition: all 0.5s ease;
   }
-
-  .navbar_menu .customBox~label~.navbar_list {
+  .navbar_menu .customBox ~ label ~ .navbar_list {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 20px;
@@ -263,65 +207,54 @@ nav {
     display: none;
   }
 }
-
 @media screen and (max-width: 1024px) and (min-width: 1024px) {
-  .navbar_menu .customBox~label~.navbar_list {
+  .navbar_menu .customBox ~ label ~ .navbar_list {
     left: auto;
     margin-top: 30px;
     max-width: 100%;
   }
 }
-
 @media screen and (max-width: 1024px) and (max-width: 768px) {
-  .navbar_menu .customBox~label~.navbar_list {
+  .navbar_menu .customBox ~ label ~ .navbar_list {
     margin-top: 0;
     background-color: rgba(0, 0, 0, 0.5);
   }
 }
-
 @media screen and (max-width: 1024px) {
-  .navbar_menu .customBox:checked~label .icon {
+  .navbar_menu .customBox:checked ~ label .icon {
     transform: rotate(0deg);
     background-color: transparent;
   }
-
-  .navbar_menu .customBox:checked~label .icon::before {
+  .navbar_menu .customBox:checked ~ label .icon::before {
     transform: rotate(45deg);
   }
-
-  .navbar_menu .customBox:checked~label .icon::after {
+  .navbar_menu .customBox:checked ~ label .icon::after {
     transform: rotate(-45deg);
   }
-
-  .navbar_menu .customBox:checked~label~.navbar_list {
+  .navbar_menu .customBox:checked ~ label ~ .navbar_list {
     display: block;
     opacity: 0;
     -webkit-animation: fadeIn 1s ease 0.1s 1 forwards;
-    animation: fadeIn 1s ease 0.1s 1 forwards;
+            animation: fadeIn 1s ease 0.1s 1 forwards;
   }
 }
-
 .navbar_list {
   list-style: none;
   padding-left: 0px;
 }
-
 @media screen and (min-width: 992px) {
   .navbar_list {
     display: flex;
   }
 }
-
 .navbar_list_item {
   margin: 10px;
 }
-
 @media screen and (min-width: 992px) {
   .navbar_list_item {
     margin-bottom: 0px;
   }
 }
-
 .navbar_link {
   text-decoration: none;
   color: #FFFFFF;
@@ -329,7 +262,6 @@ nav {
   font-weight: 700;
   transition: all 0.5s ease;
 }
-
 @media screen and (min-width: 992px) {
   .navbar_link:hover {
     color: #FF7400;
@@ -341,11 +273,9 @@ nav {
     opacity: 0;
     transform: translatey(-100%);
   }
-
   50% {
     opacity: 1;
   }
-
   100% {
     opacity: 1;
     transform: translateX(0%);
@@ -357,17 +287,14 @@ nav {
     opacity: 0;
     transform: translatey(-100%);
   }
-
   50% {
     opacity: 1;
   }
-
   100% {
     opacity: 1;
     transform: translateX(0%);
   }
 }
-
 *,
 *::after,
 *::before {
@@ -414,7 +341,6 @@ col-2 {
   border: none;
   border-radius: 5px;
 }
-
 .button:hover {
   background-color: #FFFFFF;
   color: #FF7400;
@@ -437,7 +363,6 @@ col-2 {
   .button-desktop {
     display: none;
   }
-
   .button-mobile {
     display: block;
     width: 137px;
@@ -447,18 +372,16 @@ col-2 {
     color: #FFFFFF;
     transition: all 0.5s linear;
   }
-
   .button-mobile:hover {
     background-color: #FFFFFF;
     color: #FF7400;
   }
 }
-
 .autoImg {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
 }
 
 .Title {
@@ -470,7 +393,6 @@ col-2 {
   align-items: center;
   font-size: 16px;
 }
-
 @media screen and (max-width: 1024px) {
   .Title {
     width: 100%;
@@ -502,11 +424,9 @@ col-2 {
   line-height: 24.5px;
   font-size: 1.125rem;
 }
-
 .Title h4::before {
   content: "――― ";
 }
-
 .Title h4::after {
   content: "―――";
 }
@@ -519,32 +439,26 @@ col-2 {
   .Title h4 {
     font-size: 15px;
   }
-
   .Title h4::before {
     content: "";
   }
-
   .Title h4::after {
     content: "";
   }
 }
-
 @media screen and (max-width: 650px) {
   .Title {
     font-size: 14px;
   }
-
   .Title h1 {
     font-size: 2.5rem;
     margin-bottom: 5px;
   }
-
   .Title h2 {
     font-size: 1.75rem;
     margin-bottom: 5px;
   }
 }
-
 .cards {
   max-width: 85%;
   display: flex;
@@ -566,7 +480,6 @@ col-2 {
   box-shadow: 10px 10px 40px 20px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
 }
-
 .card:hover {
   transform: scale(1.25);
 }
@@ -581,23 +494,19 @@ col-2 {
     max-height: 1150px;
     align-items: center;
   }
-
   .card {
     max-width: 300px;
   }
 }
-
 @media screen and (max-width: 500px) {
   .card {
     transition: none;
     transition-property: none;
   }
-
   .card:hover {
     transform: none;
   }
 }
-
 .h-text {
   font-size: 26px;
   font-weight: 400;
@@ -670,7 +579,7 @@ col-2 {
   width: 233px;
   height: 300px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   top: 200px;
   z-index: 0;
 }
@@ -680,7 +589,7 @@ col-2 {
   width: 255px;
   height: 400px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   left: 150px;
   top: 100px;
   z-index: 0;
@@ -691,7 +600,7 @@ col-2 {
   width: 255px;
   height: 300px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   top: 275px;
   left: 250px;
   z-index: 0;
@@ -749,7 +658,6 @@ col-2 {
     max-width: 90%;
     align-items: center;
   }
-
   .history-images {
     display: flex;
     flex-direction: column;
@@ -758,57 +666,46 @@ col-2 {
     align-items: center;
     height: 1150px;
   }
-
   .image-1 {
     top: 100px;
     left: auto !important;
   }
-
   .image-2 {
     top: 750px;
     left: auto !important;
   }
-
   .image-3 {
     top: 400px;
     left: auto !important;
   }
-
   .image-1:hover {
     transform: none;
   }
-
   .image-2:hover {
     transform: none;
   }
-
   .image-3:hover {
     transform: none;
   }
 }
-
 @media screen and (max-width: 768px) {
   .history-content {
     width: 100%;
     max-width: 100%;
     margin-bottom: 50px;
   }
-
   .history-text {
     width: 100%;
     max-width: 100%;
   }
-
   .stats {
     max-width: 60px;
     flex-wrap: wrap;
   }
-
   .info {
     margin-top: 40px;
   }
 }
-
 .offer-block {
   width: 100%;
   height: 357px;
@@ -852,40 +749,33 @@ col-2 {
     flex-direction: column;
     flex-wrap: wrap;
   }
-
   .offer-text {
     width: 100%;
   }
-
   .offer-title {
     width: 80%;
     margin-bottom: 20px;
     line-height: normal;
   }
-
   .offer-subtitle {
     width: 100%;
     text-align: center;
     margin-bottom: 40px;
   }
-
   .offer-button {
     width: 100%;
     text-align: center;
     margin-bottom: 10px;
   }
 }
-
 @media screen and (max-width: 768px) {
   .offer-title {
     font-size: 30px;
   }
-
   .offer-subtitle {
     font-size: 24px;
   }
 }
-
 .menu-block {
   margin-top: 132px;
   width: 100%;
@@ -935,7 +825,7 @@ col-2 {
   width: 200px;
   height: 140px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .options {
@@ -955,45 +845,39 @@ col-2 {
 }
 
 .price::before {
-  content: "---------------------------------------";
+  content: "-------------------------------";
 }
 
 @media screen and (max-width: 1725px) {
   .price::before {
-    content: "-------------------------";
+    content: "------------------";
   }
 }
-
 @media screen and (max-width: 1500px) {
   .price::before {
-    content: "----------------------- ";
+    content: "------------- ";
   }
 }
-
 @media screen and (max-width: 1300px) {
   .price::before {
-    content: "---------------- ";
+    content: "-------- ";
   }
 }
-
 @media screen and (max-width: 768px) {
   .price::before {
     content: "--- ";
   }
-
   .cost,
-  .price {
+.price {
     font-size: 22px;
     text-align: center;
   }
 }
-
 @media screen and (max-width: 700px) {
   .price::before {
     content: "";
   }
 }
-
 @media screen and (max-width: 1300px) {
   .menu-container {
     flex-direction: column;
@@ -1001,7 +885,6 @@ col-2 {
     align-items: center;
     justify-content: space-around;
   }
-
   .menu {
     width: 80%;
     max-width: 80%;
@@ -1009,7 +892,6 @@ col-2 {
     max-height: 700px;
   }
 }
-
 .options {
   row-gap: 50px;
 }
@@ -1019,7 +901,6 @@ col-2 {
     width: 310px;
     max-width: 310px;
   }
-
   .menu-title {
     display: flex;
     flex-direction: column;
@@ -1027,37 +908,29 @@ col-2 {
     max-width: 75px;
     min-height: 150px;
   }
-
   .options {
     display: flex;
     justify-content: center;
     align-items: center;
     row-gap: 150px;
   }
-
   .burger {
     width: 160px;
   }
-
   .cost {
     width: 150px;
     max-width: 150px;
   }
-
   .price {
     display: block;
     margin-top: 10px;
   }
-
   .menu {
     margin-left: 0;
   }
 }
-
 @media screen and (max-width: 350px) {
   .burger {
     width: 150px;
   }
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
