--- a/css/main.css
+++ b/css/main.css
@@ -304,7 +304,7 @@ nav {
 body {
   margin: 0 auto;
   width: 100%;
-  max-width: 1920px;
+  max-width: 2560px;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
 }
 
@@ -794,6 +794,7 @@ col-2 {
 .menu-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   flex-wrap: nowrap;
   width: 80%;
   max-width: 80%;
