--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@
 body {
 	margin: 0 auto;
 	width: 100%;
-	max-width: 1920px;
+	max-width: 2560px;
 	font-family: $font-primary;
 }
 
@@ -536,6 +536,7 @@ col-2 {
 .menu-container {
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
 	flex-wrap: nowrap;
 	width: 80%;
 	max-width: 80%;
