--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -96,6 +96,7 @@ nav {
               margin-top: 30px;
               max-width: 100%;
             }
+
             @media screen and (max-width:768px) {
               margin-top: 0;
               background-color: rgba($color: #000000, $alpha: 0.5);
@@ -152,6 +153,7 @@ nav {
     font-family: $font-secondary;
     font-weight: map-get($map: $fw, $key: bold);
     transition: all .5s ease;
+    margin: 0;
 
     @media screen and (min-width: $breakpoint-lg) {
       &:hover {
