--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-h1, .h1 {
+h1,
+.h1 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -9,17 +10,20 @@ h1, .h1 {
   line-height: 1.2;
 }
 @media (min-width: 768px) {
-  h1, .h1 {
+  h1,
+.h1 {
     font-size: 2.25rem;
   }
 }
 @media (min-width: 1200px) {
-  h1, .h1 {
+  h1,
+.h1 {
     font-size: 2.25rem;
   }
 }
 
-h2, .h2 {
+h2,
+.h2 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -28,17 +32,20 @@ h2, .h2 {
   line-height: 1.2;
 }
 @media (min-width: 768px) {
-  h2, .h2 {
+  h2,
+.h2 {
     font-size: 2rem;
   }
 }
 @media (min-width: 1200px) {
-  h2, .h2 {
+  h2,
+.h2 {
     font-size: 2rem;
   }
 }
 
-h3, .h3 {
+h3,
+.h3 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -47,17 +54,20 @@ h3, .h3 {
   line-height: 1.2;
 }
 @media (min-width: 768px) {
-  h3, .h3 {
+  h3,
+.h3 {
     font-size: 1.5rem;
   }
 }
 @media (min-width: 1200px) {
-  h3, .h3 {
+  h3,
+.h3 {
     font-size: 2rem;
   }
 }
 
-h4, .h4 {
+h4,
+.h4 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -66,17 +76,20 @@ h4, .h4 {
   line-height: 1.2;
 }
 @media (min-width: 768px) {
-  h4, .h4 {
+  h4,
+.h4 {
     font-size: 1.125rem;
   }
 }
 @media (min-width: 1200px) {
-  h4, .h4 {
+  h4,
+.h4 {
     font-size: 1.25rem;
   }
 }
 
-h5, .h5 {
+h5,
+.h5 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -85,17 +98,20 @@ h5, .h5 {
   line-height: 1.2;
 }
 @media (min-width: 768px) {
-  h5, .h5 {
+  h5,
+.h5 {
     font-size: 1.125rem;
   }
 }
 @media (min-width: 1200px) {
-  h5, .h5 {
+  h5,
+.h5 {
     font-size: 1.125rem;
   }
 }
 
-h6, .h6 {
+h6,
+.h6 {
   margin-top: 0;
   margin-bottom: 0rem;
   font-family: "Tinos", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
@@ -104,12 +120,14 @@ h6, .h6 {
   line-height: 1.2;
 }
 @media (min-width: 768px) {
-  h6, .h6 {
+  h6,
+.h6 {
     font-size: 1rem;
   }
 }
 @media (min-width: 1200px) {
-  h6, .h6 {
+  h6,
+.h6 {
     font-size: 1rem;
   }
 }
@@ -261,6 +279,7 @@ nav {
   font-family: "Open Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
   transition: all 0.5s ease;
+  margin: 0;
 }
 @media screen and (min-width: 992px) {
   .navbar_link:hover {
@@ -451,8 +470,10 @@ col-2 {
     font-size: 14px;
   }
   .Title h1 {
+    text-align: center;
     font-size: 2.5rem;
     margin-bottom: 5px;
+    line-height: normal;
   }
   .Title h2 {
     font-size: 1.75rem;
@@ -471,7 +492,7 @@ col-2 {
 .card {
   display: block;
   width: 350px;
-  height: 350px;
+  height: 370px;
   text-align: center;
   margin-top: -100px;
   background-color: #FFFFFF;
@@ -510,6 +531,7 @@ col-2 {
 .h-text {
   font-size: 26px;
   font-weight: 400;
+  margin: 5px 0;
 }
 
 .line {
@@ -525,6 +547,15 @@ col-2 {
   margin-top: 15px;
 }
 
+@media screen and (max-width: 500px) {
+  .text {
+    font-size: 22px;
+    margin-top: 0;
+  }
+  .h-text {
+    margin: 5px 0;
+  }
+}
 .history-block {
   width: 80%;
   display: flex;
