--- a/css/main.scss
+++ b/css/main.scss
@@ -166,8 +166,10 @@ col-2 {
 	}
 
 	.Title h1 {
+		text-align: center;
 		font-size: 2.5rem;
 		margin-bottom: 5px;
+		line-height: normal;
 	}
 
 	.Title h2 {
@@ -188,7 +190,7 @@ col-2 {
 .card {
 	display: block;
 	width: 350px;
-	height: 350px;
+	height: 370px;
 	text-align: center;
 	margin-top: -100px;
 	background-color: $color6;
@@ -232,6 +234,7 @@ col-2 {
 .h-text {
 	font-size: 26px;
 	font-weight: map-get($map: $fw, $key: regular);
+	margin: 5px 0;
 }
 
 .line {
@@ -245,6 +248,17 @@ col-2 {
 	width: 95%;
 	font-size: 26px;
 	margin-top: 15px;
+}
+
+@media screen and (max-width:500px) {
+	.text {
+		font-size: 22px;
+		margin-top: 0;
+	}
+
+	.h-text {
+		margin: 5px 0;
+	}
 }
 
 .history-block {
