--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -153,7 +153,7 @@ nav {
     font-family: $font-secondary;
     font-weight: map-get($map: $fw, $key: bold);
     transition: all .5s ease;
-    margin: 0;
+    margin: 0 2px;
 
     @media screen and (min-width: $breakpoint-lg) {
       &:hover {
