--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,7 @@ nav {
   font-family: "Open Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 700;
   transition: all 0.5s ease;
-  margin: 0;
+  margin: 0 2px;
 }
 @media screen and (min-width: 992px) {
   .navbar_link:hover {
@@ -492,7 +492,7 @@ col-2 {
 .card {
   display: block;
   width: 350px;
-  height: 370px;
+  height: 380px;
   text-align: center;
   margin-top: -100px;
   background-color: #FFFFFF;
